# app/services/dto/UserDTO.js
@@ -1,10 +1,5 @@
 class UserDTO{
-    id;
     imie;
-    nazwisko
-    login;
-    haslo;
-    email;
 }
 
 module.exports = {UserDTO}
